--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dragon-mars",
   "version": "1.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "Grace Shopper, an e-commerce site created by Dragon Mars",
   "engines": {
     "node": ">= 7.0.0"
   },
