--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "bluebird": "^3.5.3",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
-    "morgan": "^1.8.1",
+    "morgan": "^1.9.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.2",
