--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.3.1",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.84.0",
     "sequelize": "^4.38.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "stripe": "^6.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.55",
